add goals example

--- a/templates/balance.html
+++ b/templates/balance.html
@@ -21,6 +21,14 @@
     </ul>
   {% endif %}
 
+  <h2>goals</h2>
+  <ul>
+    <li>€100: admission{% if received >= 10000 %} ✨funded!!{% endif %}</li>
+    <li>~€200: + round-trip train ticket{% if received >= 20000 %} ✨funded!!{% endif %}</li>
+    <li>~€350: + lodging{% if received >= 35000 %} ✨funded!!{% endif %}</li>
+    <li>&gt;€350: + spending money</li>
+  </ul>
+
   <footer>
     <a href="https://github.com/qguv/cyburgers">source on Github</a>
   </footer>
