add simple cache

--- a/templates/balance.html
+++ b/templates/balance.html
@@ -31,5 +31,7 @@
 
   <footer>
     <a href="https://github.com/qguv/cyburgers">source on Github</a>
+    <br />
+    <span>rendered {{ render_time }}</span>
   </footer>
 {% endblock %}
