hacky balance elimination system

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -79,6 +79,11 @@
         margin-top: 5em;
         text-align: center;
       }
+
+      ul.undecorated {
+        list-style-type: none;
+      }
+
     </style>
   </head>
   <body>
